--- a/public/index.html
+++ b/public/index.html
@@ -152,7 +152,7 @@
   
   
     
-    <link rel="stylesheet" href="http://localhost:1313/css/main.min.1283045fe84415fa77742ace85e1ff0859724057ab5d6c7f2d89445edba7138d.css" integrity="sha256-EoMEX&#43;hEFfp3dCrOheH/CFlyQFerXWx/LYlEXtunE40=">
+    <link rel="stylesheet" href="http://localhost:1313/css/main.min.5350cff032b76d4a323360147dd012531b78dc65a97ab99144558985f28bfef1.css" integrity="sha256-U1DP8DK3bUoyM2AUfdASUxt43GWpermRRFWJhfKL/vE=">
   
 
   
