--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
         "description": "Онлайн консультации психолога. Лечение тревожности, панических атак методом когнитивно-поведенческой терапии (КПТ).",
         "url": "http:\/\/localhost:1313\/",
         "telephone": "+905071754633",
-        "email": "natalia.prokofeva.therapy@gmail.com",
+        "email": "kseniya.parvatkina.therapy@gmail.com",
         "address": {
           "@type": "PostalAddress",
           "addressCountry": "RU"
@@ -559,7 +559,7 @@
           </div>
 
           <div class="testimonial-card__content">
-            <p class="testimonial-card__text">Наталья научила меня конкретным техникам, которые работают. Больше всего помогла экспозиционная терапия. Теперь я знаю, что делать, если тревога появится снова.</p>
+            <p class="testimonial-card__text">Ксения научила меня конкретным техникам, которые работают. Больше всего помогла экспозиционная терапия. Теперь я знаю, что делать, если тревога появится снова.</p>
 
             <div class="testimonial-card__details">
               <div class="detail">
@@ -605,7 +605,7 @@
           </div>
 
           <div class="testimonial-card__content">
-            <p class="testimonial-card__text">Я думала, что социальная тревога — это навсегда. Наталья показала, что это можно изменить. Сейчас я живу полной жизнью, а не прячусь от людей.</p>
+            <p class="testimonial-card__text">Я думала, что социальная тревога — это навсегда. Ксения показала, что это можно изменить. Сейчас я живу полной жизнью, а не прячусь от людей.</p>
 
             <div class="testimonial-card__details">
               <div class="detail">
@@ -628,7 +628,7 @@
           </div>
 
           <div class="testimonial-card__content">
-            <p class="testimonial-card__text">ОКР контролировало мою жизнь 5 лет. Экспозиционная терапия была непростой, но она работает. Наталья поддерживала меня на каждом этапе.</p>
+            <p class="testimonial-card__text">ОКР контролировало мою жизнь 5 лет. Экспозиционная терапия была непростой, но она работает. Ксения поддерживала меня на каждом этапе.</p>
 
             <div class="testimonial-card__details">
               <div class="detail">
@@ -674,7 +674,7 @@
           </div>
 
           <div class="testimonial-card__content">
-            <p class="testimonial-card__text">Я была в отчаянии. Мне казалось, что я никогда не смогу жить нормально. Наталья доказала, что это возможно. Благодарна за терпение и профессионализм.</p>
+            <p class="testimonial-card__text">Я была в отчаянии. Мне казалось, что я никогда не смогу жить нормально. Ксения доказала, что это возможно. Благодарна за терпение и профессионализм.</p>
 
             <div class="testimonial-card__details">
               <div class="detail">
@@ -992,11 +992,11 @@
             </a>
           </li>
           <li>
-            <a href="mailto:contact@example.com" class="footer__link">
+            <a href="mailto:kseniya.parvatkina.therapy@gmail.com" class="footer__link">
               <svg class="footer__icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
               </svg>
-              contact@example.com
+              kseniya.parvatkina.therapy@gmail.com
             </a>
           </li>
         </ul>
