--- a/public/index.html
+++ b/public/index.html
@@ -352,11 +352,11 @@
     <h2 class="section__title">Как помогает терапия</h2>
     <p class="section__subtitle">Что изменится через 8-12 встреч</p>
 
-    <div class="benefits__grid">
+    <div class="benefits__grid"> 
       <div class="benefit-card">
         <div class="benefit-card__number">85%</div>
         <h3 class="benefit-card__title">Снижение тревоги</h3>
-        <p class="benefit-card__description">Уровень тревожности снижается с 8-9 баллов до 2-3 баллов по шкале оценки. Вы перестанете постоянно беспокоиться о будущем.</p>
+        <p class="benefit-card__description">Клиентов отмечают значительное снижение тревожности с 8-9 баллов до 2-3 баллов по шкале оценки после курса терапии. Вы перестанете постоянно беспокоиться о будущем.</p>
       </div>
 
       <div class="benefit-card">
@@ -408,11 +408,11 @@
 
       <div class="about__info">
         <div class="about__bio">
-          <p>Меня зовут Ксения, я клинический психолог и психотерапевт с 4-летним опытом работы с тревожными расстройствами.</p>
+          <p>Меня зовут Ксения, я клинический и кризисный психолог, психотерапевт с 4-летним опытом работы с тревожными расстройствами.</p>
 
-          <p>Специализируюсь на когнитивно-поведенческой терапии (КПТ) — методе с доказанной эффективностью 85% при лечении тревоги и панических атак. Помогла более 200 клиентам вернуть контроль над своей жизнью.</p>
+          <p>Специализируюсь на когнитивно-поведенческой терапии (КПТ) — методе с доказанной эффективностью 85% при лечении тревоги и панических атак, а также синтон-подходе и нейрокогнитивном переобучении. Мои клиенты отмечают значительное снижение тревоги после курса терапии. Помогла более 200 клиентам вернуть контроль над своей жизнью.</p>
 
-          <p>Работаю только онлайн, что позволяет вам получать помощь из любой точки мира в комфортной обстановке. Конфиденциальность гарантирована — используем защищенные каналы связи.</p>
+          <p>Работаю только онлайн, что позволяет вам получать помощь из любой точки мира в комфортной и безопасной обстановке. Конфиденциальность гарантирована — используем защищенные каналы связи.</p>
         </div>
 
         <div class="about__credentials">
