--- a/public/index.html
+++ b/public/index.html
@@ -160,7 +160,7 @@
   
   
     
-    <link rel="stylesheet" href="http://localhost:1313/css/main.min.42f4b6faea0bf759b5045d6f2462bf61aba37a56fcf5a191c774b12f2899880d.css" integrity="sha256-QvS2&#43;uoL91m1BF1vJGK/Yaujelb89aGRx3SxLyiZiA0=">
+    <link rel="stylesheet" href="http://localhost:1313/css/main.min.fbad43ac2bafae1bad32123835bab45ab6ff0f6ded7177f6bf426f9cf63ce040.css" integrity="sha256-&#43;61DrCuvrhutMhI4Nbq0Wrb/D23tcXf2v0JvnPY84EA=">
   
 
   
@@ -240,26 +240,10 @@
       </div>
 
       <div class="hero__cta">
-        <a href="tg://resolve?domain=happy_habits_ru&text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%21&#43;%D0%A5%D0%BE%D1%87%D1%83&#43;%D0%B7%D0%B0%D0%BF%D0%B8%D1%81%D0%B0%D1%82%D1%8C%D1%81%D1%8F&#43;%D0%BD%D0%B0&#43;%D0%B1%D0%B5%D1%81%D0%BF%D0%BB%D0%B0%D1%82%D0%BD%D1%83%D1%8E&#43;%D0%B4%D0%B8%D0%B0%D0%B3%D0%BD%D0%BE%D1%81%D1%82%D0%B8%D0%BA%D1%83&#43;%2830&#43;%D0%BC%D0%B8%D0%BD%D1%83%D1%82%29"
-           class="btn btn--primary btn--telegram"
-           data-cta="telegram"
-           data-fallback="https://t.me/happy_habits_ru"
-           aria-label="Записаться на бесплатную диагностику через Telegram">
-          <svg class="btn__icon" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm4.64 6.8c-.15 1.58-.8 5.42-1.13 7.19-.14.75-.42 1-.68 1.03-.58.05-1.02-.38-1.58-.75-.88-.58-1.38-.94-2.23-1.5-.99-.65-.35-1.01.22-1.59.15-.15 2.71-2.48 2.76-2.69a.2.2 0 00-.05-.18c-.06-.05-.14-.03-.21-.02-.09.02-1.49.95-4.22 2.79-.4.27-.76.41-1.08.4-.36-.01-1.04-.2-1.55-.37-.63-.2-1.12-.31-1.08-.66.02-.18.27-.36.74-.55 2.92-1.27 4.86-2.11 5.83-2.51 2.78-1.16 3.35-1.36 3.73-1.36.08 0 .27.02.39.12.1.08.13.19.14.27-.01.06.01.24 0 .38z"/>
-          </svg>
-          Написать в Telegram
-        </a>
-
-        <a href="https://wa.me/905071754633?text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%21&#43;%D0%A5%D0%BE%D1%87%D1%83&#43;%D0%B7%D0%B0%D0%BF%D0%B8%D1%81%D0%B0%D1%82%D1%8C%D1%81%D1%8F&#43;%D0%BD%D0%B0&#43;%D0%B1%D0%B5%D1%81%D0%BF%D0%BB%D0%B0%D1%82%D0%BD%D1%83%D1%8E&#43;%D0%B4%D0%B8%D0%B0%D0%B3%D0%BD%D0%BE%D1%81%D1%82%D0%B8%D0%BA%D1%83&#43;%2830&#43;%D0%BC%D0%B8%D0%BD%D1%83%D1%82%29"
-           class="btn btn--secondary btn--whatsapp"
-           data-cta="whatsapp"
-           data-fallback="https://web.whatsapp.com/"
-           aria-label="Записаться на бесплатную диагностику через WhatsApp">
-          <svg class="btn__icon" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-            <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/>
-          </svg>
-          Написать в WhatsApp
+        <a href="#cta-final"
+           class="btn btn--primary"
+           aria-label="Записаться на бесплатную диагностику">
+          Записаться на бесплатную диагностику
         </a>
       </div>
     </div>
@@ -325,22 +309,9 @@
 
     <div class="symptoms__cta">
       <p class="symptoms__cta-text">Если отметили 3+ пунктов — запишитесь на бесплатную диагностику (30 минут)</p>
-
-      <div class="cta-buttons">
-        <a href="tg://resolve?domain=happy_habits_ru&text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%21&#43;%D0%A5%D0%BE%D1%87%D1%83&#43;%D0%B7%D0%B0%D0%BF%D0%B8%D1%81%D0%B0%D1%82%D1%8C%D1%81%D1%8F&#43;%D0%BD%D0%B0&#43;%D0%B1%D0%B5%D1%81%D0%BF%D0%BB%D0%B0%D1%82%D0%BD%D1%83%D1%8E&#43;%D0%B4%D0%B8%D0%B0%D0%B3%D0%BD%D0%BE%D1%81%D1%82%D0%B8%D0%BA%D1%83&#43;%2830&#43;%D0%BC%D0%B8%D0%BD%D1%83%D1%82%29"
-           class="btn btn--primary btn--telegram"
-           data-cta="telegram"
-           data-fallback="https://t.me/happy_habits_ru">
-          Записаться через Telegram
-        </a>
-
-        <a href="https://wa.me/905071754633?text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%21&#43;%D0%A5%D0%BE%D1%87%D1%83&#43;%D0%B7%D0%B0%D0%BF%D0%B8%D1%81%D0%B0%D1%82%D1%8C%D1%81%D1%8F&#43;%D0%BD%D0%B0&#43;%D0%B1%D0%B5%D1%81%D0%BF%D0%BB%D0%B0%D1%82%D0%BD%D1%83%D1%8E&#43;%D0%B4%D0%B8%D0%B0%D0%B3%D0%BD%D0%BE%D1%81%D1%82%D0%B8%D0%BA%D1%83&#43;%2830&#43;%D0%BC%D0%B8%D0%BD%D1%83%D1%82%29"
-           class="btn btn--secondary btn--whatsapp"
-           data-cta="whatsapp"
-           data-fallback="https://web.whatsapp.com/">
-          Записаться через WhatsApp
-        </a>
-      </div>
+      <a href="#cta-final" class="btn btn--primary">
+        Записаться
+      </a>
     </div>
   </div>
 </section>
@@ -476,10 +447,8 @@
             Знакомимся, обсуждаем ваш запрос и симптомы. Я объясняю, как работает КПТ и подходит ли она в вашем случае. Это бесплатно и ни к чему не обязывает.
           </p>
           <div class="step__cta">
-            <a href="tg://resolve?domain=happy_habits_ru&text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%21&#43;%D0%A5%D0%BE%D1%87%D1%83&#43;%D0%B7%D0%B0%D0%BF%D0%B8%D1%81%D0%B0%D1%82%D1%8C%D1%81%D1%8F&#43;%D0%BD%D0%B0&#43;%D0%B1%D0%B5%D1%81%D0%BF%D0%BB%D0%B0%D1%82%D0%BD%D1%83%D1%8E&#43;%D0%B4%D0%B8%D0%B0%D0%B3%D0%BD%D0%BE%D1%81%D1%82%D0%B8%D0%BA%D1%83&#43;%2830&#43;%D0%BC%D0%B8%D0%BD%D1%83%D1%82%29"
-               class="btn btn--small btn--telegram"
-               data-cta="telegram"
-               data-position="step-1">
+            <a href="#cta-final"
+               class="btn btn--small">
               Записаться на диагностику
             </a>
           </div>
@@ -519,21 +488,9 @@
 
     <div class="process__cta-final">
       <p class="cta-text">Готовы начать? Запишитесь на бесплатную диагностику</p>
-      <div class="cta-buttons">
-        <a href="tg://resolve?domain=happy_habits_ru&text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%21&#43;%D0%A5%D0%BE%D1%87%D1%83&#43;%D0%B7%D0%B0%D0%BF%D0%B8%D1%81%D0%B0%D1%82%D1%8C%D1%81%D1%8F&#43;%D0%BD%D0%B0&#43;%D0%B1%D0%B5%D1%81%D0%BF%D0%BB%D0%B0%D1%82%D0%BD%D1%83%D1%8E&#43;%D0%B4%D0%B8%D0%B0%D0%B3%D0%BD%D0%BE%D1%81%D1%82%D0%B8%D0%BA%D1%83&#43;%2830&#43;%D0%BC%D0%B8%D0%BD%D1%83%D1%82%29"
-           class="btn btn--primary btn--telegram"
-           data-cta="telegram"
-           data-position="process-end">
-          Telegram
-        </a>
-
-        <a href="https://wa.me/905071754633?text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%21&#43;%D0%A5%D0%BE%D1%87%D1%83&#43;%D0%B7%D0%B0%D0%BF%D0%B8%D1%81%D0%B0%D1%82%D1%8C%D1%81%D1%8F&#43;%D0%BD%D0%B0&#43;%D0%B1%D0%B5%D1%81%D0%BF%D0%BB%D0%B0%D1%82%D0%BD%D1%83%D1%8E&#43;%D0%B4%D0%B8%D0%B0%D0%B3%D0%BD%D0%BE%D1%81%D1%82%D0%B8%D0%BA%D1%83&#43;%2830&#43;%D0%BC%D0%B8%D0%BD%D1%83%D1%82%29"
-           class="btn btn--secondary btn--whatsapp"
-           data-cta="whatsapp"
-           data-position="process-end">
-          WhatsApp
-        </a>
-      </div>
+      <a href="#cta-final" class="btn btn--primary">
+        Записаться
+      </a>
     </div>
   </div>
 </section>
@@ -783,10 +740,7 @@
         </ul>
 
         <div class="pricing-card__cta">
-          <a href="tg://resolve?domain=happy_habits_ru&text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%21&#43;%D0%A5%D0%BE%D1%87%D1%83&#43;%D0%B7%D0%B0%D0%BF%D0%B8%D1%81%D0%B0%D1%82%D1%8C%D1%81%D1%8F&#43;%D0%BD%D0%B0&#43;%D1%80%D0%B0%D0%B7%D0%BE%D0%B2%D1%83%D1%8E&#43;%D1%81%D0%B5%D1%81%D1%81%D0%B8%D1%8E&#43;%2860&#43;%D0%BC%D0%B8%D0%BD%D1%83%D1%82%2C&#43;5000%E2%82%BD%29"
-             class="btn btn--outline"
-             data-cta="telegram"
-             data-position="pricing-single">
+          <a href="#cta-final" class="btn btn--outline">
             Записаться
           </a>
         </div>
@@ -814,10 +768,7 @@
         </ul>
 
         <div class="pricing-card__cta">
-          <a href="tg://resolve?domain=happy_habits_ru&text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%21&#43;%D0%A5%D0%BE%D1%87%D1%83&#43;%D0%BA%D1%83%D0%BF%D0%B8%D1%82%D1%8C&#43;%D0%BF%D0%B0%D0%BA%D0%B5%D1%82&#43;10&#43;%D1%81%D0%B5%D1%81%D1%81%D0%B8%D0%B9&#43;%2845000%E2%82%BD%29"
-             class="btn btn--primary"
-             data-cta="telegram"
-             data-position="pricing-package">
+          <a href="#cta-final" class="btn btn--primary">
             Купить пакет
           </a>
         </div>
@@ -843,7 +794,7 @@
 
 
   
-  <section class="faq" data-block="faq">
+  <section id="faq" class="faq" data-block="faq">
   <div class="container">
     <h2 class="section__title">FAQ — отвечаю на ваши сомнения</h2>
 
@@ -906,7 +857,7 @@
 
 
   
-  <section class="cta-final" data-block="cta-final">
+  <section id="cta-final" class="cta-final" data-block="cta-final">
   <div class="container">
     <h2 class="cta-final__title">Первый шаг — бесплатная диагностика 30 минут</h2>
 
