--- a/public/index.html
+++ b/public/index.html
@@ -160,7 +160,7 @@
   
   
     
-    <link rel="stylesheet" href="http://localhost:1313/css/main.min.fbad43ac2bafae1bad32123835bab45ab6ff0f6ded7177f6bf426f9cf63ce040.css" integrity="sha256-&#43;61DrCuvrhutMhI4Nbq0Wrb/D23tcXf2v0JvnPY84EA=">
+    <link rel="stylesheet" href="http://localhost:1313/css/main.min.a98179c73144e5594a0a29389e9d122e9b02837274fbc13a8de8782a98051559.css" integrity="sha256-qYF5xzFE5VlKCik4np0SLpsCg3J0&#43;8E6jeh4KpgFFVk=">
   
 
   
@@ -231,7 +231,7 @@
     <div class="hero__content">
       <h1 class="hero__title">Освободитесь от тревоги за 8-12 сессий по доказательному методу</h1>
 
-      <p class="hero__subtitle">7-8 из 10 клиентов значительно снижают уровень тревоги уже через 2 месяца</p>
+      <p class="hero__subtitle">8 из 10 клиентов значительно снижают уровень тревоги уже через 2 месяца</p>
 
       <div class="hero__badges">
         <span class="badge">Конфиденциально</span>
@@ -240,16 +240,13 @@
       </div>
 
       <div class="hero__cta">
-        <a href="#cta-final"
-           class="btn btn--primary"
-           aria-label="Записаться на бесплатную диагностику">
+        <a href="#cta-final" class="btn btn--primary" aria-label="Записаться на бесплатную диагностику">
           Записаться на бесплатную диагностику
         </a>
       </div>
     </div>
   </div>
 </section>
-
 
   
   <section class="symptoms" data-block="symptoms">
@@ -308,7 +305,7 @@
     </ul>
 
     <div class="symptoms__cta">
-      <p class="symptoms__cta-text">Если отметили 3+ пунктов — запишитесь на бесплатную диагностику (30 минут)</p>
+      <p class="symptoms__cta-text">Если отметили 2+ пунктов — запишитесь на бесплатную диагностику (30 минут)</p>
       <a href="#cta-final" class="btn btn--primary">
         Записаться
       </a>
@@ -355,7 +352,7 @@
       </div>
       <p class="method-description">
         Доказанная эффективность в лечении тревожных расстройств.
-        <strong>7-8 из 10 клиентов</strong> достигают значительного улучшения за 8-12 сессий.
+        <strong>8 из 10 клиентов</strong> достигают значительного улучшения за 8-12 сессий.
       </p>
     </div>
   </div>
