--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
         "knowsAbout": ["Когнитивно-поведенческая терапия", "Тревожные расстройства", "Панические атаки", "ОКР", "Психотерапия"],
         "alumniOf": {
           "@type": "Organization",
-          "name": "Московский Государственный Университет им. М.В. Ломоносова"
+          "name": "МИП"
         }
       },
       {
@@ -799,6 +799,7 @@
           <li>Письменные материалы после сессии (если требуется)</li>
           <li>Домашнее задание для закрепления</li>
           <li>Поддержка между сессиями (текстовые вопросы)</li>
+          <li>Возможна оплата в любой валюте по договорённости</li>
         </ul>
 
         <div class="pricing-card__cta">
@@ -827,6 +828,7 @@
           <li>Приоритетная запись на удобное время</li>
           <li>Поддержка между сессиями (текстовые вопросы)</li>
           <li>Гарантия результата или возврат средств*</li>
+          <li>Возможна оплата в любой валюте по договорённости</li>
         </ul>
 
         <div class="pricing-card__cta">
@@ -841,13 +843,14 @@
       <h3 class="terms__title">Условия</h3>
 
       <ul class="terms__list">
+        <li><strong>Валюта:</strong> Возможна оплата в любой валюте по договорённости</li>
         <li><strong>Отмена:</strong> Возможна без штрафа за 24 часа до сессии. При отмене позднее сессия считается
           использованной.</li>
         <li><strong>Оплата:</strong> Перевод на карту, СБП или другие способы оплаты.</li>
-        <li><strong>Гарантия*:</strong> Если после 5 сессий вы не видите улучшений и выполняли домашние задания,
-          возвращаю 50% стоимости пакета.</li>
         <li><strong>Конфиденциальность:</strong> Все разговоры остаются между нами. Я не записываю сессии без вашего
           разрешения.</li>
+        <li><strong>* Гарантия:</strong> Если после 5 сессий вы не видите улучшений и выполняли домашние задания,
+          возвращаю 50% стоимости пакета.</li>
       </ul>
     </div>
 
