--- a/public/index.html
+++ b/public/index.html
@@ -296,7 +296,8 @@
       </div>
 
       <div class="hero__cta">
-        <a href="#cta-final" class="btn btn--primary" aria-label="Записаться на бесплатную диагностику">
+        <a href="#cta-final" class="btn btn--primary" aria-label="Записаться на бесплатную диагностику"
+           data-cta="scroll-to-cta" data-position="hero">
           Записаться на бесплатную диагностику
         </a>
       </div>
@@ -362,7 +363,8 @@
 
     <div class="symptoms__cta">
       <p class="symptoms__cta-text">Если отметили 3+ пунктов — запишитесь на бесплатную диагностику (30 минут)</p>
-      <a href="#cta-final" class="btn btn--primary">
+      <a href="#cta-final" class="btn btn--primary"
+         data-cta="scroll-to-cta" data-position="symptoms">
         Записаться
       </a>
     </div>
@@ -509,7 +511,8 @@
           </p>
           <div class="step__cta">
             <a href="#cta-final"
-               class="btn btn--small">
+               class="btn btn--small"
+               data-cta="scroll-to-cta" data-position="process-step1">
               Записаться на диагностику
             </a>
           </div>
@@ -549,7 +552,8 @@
 
     <div class="process__cta-final">
       <p class="cta-text">Готовы начать? Запишитесь на бесплатную диагностику</p>
-      <a href="#cta-final" class="btn btn--primary">
+      <a href="#cta-final" class="btn btn--primary"
+         data-cta="scroll-to-cta" data-position="process-final">
         Записаться
       </a>
     </div>
@@ -803,7 +807,8 @@
         </ul>
 
         <div class="pricing-card__cta">
-          <a href="#cta-final" class="btn btn--outline">
+          <a href="#cta-final" class="btn btn--outline"
+             data-cta="scroll-to-cta" data-position="pricing-single">
             Записаться
           </a>
         </div>
@@ -832,7 +837,8 @@
         </ul>
 
         <div class="pricing-card__cta">
-          <a href="#cta-final" class="btn btn--primary">
+          <a href="#cta-final" class="btn btn--primary"
+             data-cta="scroll-to-cta" data-position="pricing-package">
             Купить пакет
           </a>
         </div>
@@ -1077,7 +1083,7 @@
   
   
   
-  <script src="http://localhost:1313/js/analytics.min.c8f88ff6e0e8789f123f00f37ac6616e296fa03b7d9a5bc01549c81af5e802f5.js" integrity="sha256-yPiP9uDoeJ8SPwDzesZhbilvoDt9mlvAFUnIGvXoAvU="></script>
+  <script src="http://localhost:1313/js/analytics.min.8705adfbda40aea036a21ea01f094bc1f93ff50718af1859523d380aa5f764d8.js" integrity="sha256-hwWt&#43;9pArqA2oh6gHwlLwfk/9QcYrxhZUj04CqX3ZNg="></script>
   
 
   
@@ -1095,7 +1101,7 @@
   
   
   
-  <script src="http://localhost:1313/js/palette-switcher.min.f5a06d4ab8d699baeccd82dcabdff0a9e27d5d84efd7d3c0aef6bb809b09a4ab.js" integrity="sha256-9aBtSrjWmbrszYLcq9/wqeJ9XYTv19PArva7gJsJpKs="></script>
+  <script src="http://localhost:1313/js/palette-switcher.min.f71469b2467895ea8e5e59cad604e62e443cb4a37ea27fcc4a0f6551145766be.js" integrity="sha256-9xRpskZ4leqOXlnK1gTmLkQ8tKN&#43;on/MSg9lURRXZr4="></script>
   
 
   
