--- a/public/v/b/index.html
+++ b/public/v/b/index.html
@@ -685,7 +685,7 @@
   <footer class="footer" data-block="footer">
   <div class="container">
     <div class="footer__content">
-      <div class="footer__section">
+      <div class="footer__section" id="footer-contact-section">
         <h3 class="footer__title">Связаться</h3>
         <div class="footer__social-buttons">
           <a href="tg://resolve?domain=happy_habits_ru&text=&#43;%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%21&#43;%D0%A5%D0%BE%D1%87%D1%83&#43;%D0%B7%D0%B0%D0%BF%D0%B8%D1%81%D0%B0%D1%82%D1%8C%D1%81%D1%8F&#43;%D0%BD%D0%B0&#43;%D0%BA%D0%BE%D0%BD%D1%81%D1%83%D0%BB%D1%8C%D1%82%D0%B0%D1%86%D0%B8%D1%8E" class="social-btn social-btn--telegram" data-fallback="https://t.me/happy_habits_ru"
@@ -793,7 +793,7 @@
   
   
   
-  <script src="http://localhost:1313/js/quiz.min.ce36d6506f93822d588326a0db1f300f13112c4163ff23800c5a8b79682fe3e3.js" integrity="sha256-zjbWUG&#43;Tgi1Ygyag2x8wDxMRLEFj/yOADFqLeWgv4&#43;M="></script>
+  <script src="http://localhost:1313/js/quiz.min.7240f9b557a60318352d8588da8143364f12d3c1d62ebc69d6141f72c206d10b.js" integrity="sha256-ckD5tVemAxg1LYWI2oFDNk8S08HWLrxp1hQfcsIG0Qs="></script>
   
 </body>
 
