add 5 quiz step

--- a/public/v/index.html
+++ b/public/v/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta charset="UTF-8">
   <meta name="robots" content="noindex,nofollow">
   <meta http-equiv="refresh" content="0;url=/v/a/">
