remove Minimalist theme

--- a/public/v/a/index.html
+++ b/public/v/a/index.html
@@ -1150,7 +1150,7 @@
       <div class="footer__section">
         <h3 class="footer__title">Часы работы</h3>
         <p class="footer__text">Понедельник — Пятница: 10:00 — 20:00 МСК</p>
-        <p class="footer__text">Суббота: 12:00 — 18:00 МСК</p>
+        <p class="footer__text">Суббота: 10:00 — 18:00 МСК</p>
         <p class="footer__text">Воскресенье: выходной</p>
       </div>
 
@@ -1216,7 +1216,7 @@
   
   
   
-  <script src="http://localhost:1313/js/palette-switcher.min.f71469b2467895ea8e5e59cad604e62e443cb4a37ea27fcc4a0f6551145766be.js" integrity="sha256-9xRpskZ4leqOXlnK1gTmLkQ8tKN&#43;on/MSg9lURRXZr4="></script>
+  <script src="http://localhost:1313/js/palette-switcher.min.8b1c74ecd8d12a7d7443de6d1d41dc43c1f44d120fc2e8c256657454dc2835e6.js" integrity="sha256-ixx07NjRKn10Q95tHUHcQ8H0TRIPwujCVmV0VNwoNeY="></script>
   
 
   
