--- a/public/v/a/index.html
+++ b/public/v/a/index.html
@@ -27,7 +27,7 @@
   
   <meta property="og:type" content="website">
   <meta property="og:url" content="http://localhost:1313/v/a/">
-  <meta property="og:title" content="Психолог онлайн: Лечение тревожности КПТ | Ксения Парваткина">
+  <meta property="og:title" content="Психолог онлайн: Помощь при тревожности КПТ | Ксения Парваткина">
   <meta property="og:description"
     content="Избавьтесь от тревоги за 8-12 сессий. Когнитивно-поведенческая терапия (КПТ) с доказанной эффективностью 85%. Онлайн консультации, конфиденциально.">
   
@@ -41,7 +41,7 @@
 
   
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Психолог онлайн: Лечение тревожности КПТ | Ксения Парваткина">
+  <meta name="twitter:title" content="Психолог онлайн: Помощь при тревожности КПТ | Ксения Парваткина">
   <meta name="twitter:description"
     content="Избавьтесь от тревоги за 8-12 сессий. Когнитивно-поведенческая терапия (КПТ) с доказанной эффективностью 85%.">
   
@@ -78,7 +78,7 @@
         "@type": "ProfessionalService",
         "@id": "http:\/\/localhost:1313\/#service",
         "name": "Психолог онлайн — Ксения Парваткина",
-        "description": "Онлайн консультации психолога. Лечение тревожности, панических атак методом когнитивно-поведенческой терапии (КПТ).",
+        "description": "Онлайн консультации психолога. Психологическая помощь при тревоге, панических атаках методом когнитивно-поведенческой терапии (КПТ).",
         "url": "http:\/\/localhost:1313\/",
         "telephone": "+905071754633",
         "address": {
@@ -162,7 +162,7 @@
         "@id": "http:\/\/localhost:1313\/#website",
         "url": "http:\/\/localhost:1313\/",
         "name": "Психолог онлайн — Помощь при тревоге и панических атаках",
-        "description": "Психолог онлайн. Лечение тревожности методом КПТ",
+        "description": "Психолог онлайн. Психологическая помощь при тревоге методом КПТ",
         "publisher": {
           "@id": "http:\/\/localhost:1313\/#person"
         },
@@ -417,7 +417,7 @@
         <strong>Метод: КПТ</strong><br>(когнитивно-поведенческая терапия)
       </div>
       <p class="method-description">
-        Доказанная эффективность в лечении тревожных расстройств.
+        Доказанная эффективность в работе с тревожными расстройствами.
         <strong>8 из 10 клиентов</strong> достигают значительного улучшения за 8-12 сессий.
       </p>
     </div>
@@ -444,8 +444,8 @@
           <p>Меня зовут Ксения, я клинический и кризисный психолог, психотерапевт с большим опытом работы с тревожными
             расстройствами.</p>
 
-          <p>Специализируюсь на когнитивно-поведенческой терапии (КПТ) — методе с доказанной эффективностью 85% при
-            лечении тревоги и панических атак, а также синтон-подходе и нейрокогнитивном переобучении. Мои клиенты
+          <p>Специализируюсь на когнитивно-поведенческой терапии (КПТ) — научно обоснованном методе работы с
+            тревогой и паническими атаками, а также синтон-подходе и нейрокогнитивном переобучении. Мои клиенты
             отмечают значительное снижение тревоги после курса терапии. Помогла более 200 клиентам вернуть контроль над
             своей жизнью.</p>
 
@@ -889,7 +889,7 @@
       </div>
 
       <div class="faq-item">
-        <h3 class="faq-item__question">Сколько времени займет лечение?</h3>
+        <h3 class="faq-item__question">Сколько времени займет терапия?</h3>
         <div class="faq-item__answer">
           <p>Большинство клиентов видят значительное улучшение за 8-12 сессий (2-3 месяца при еженедельных встречах).
             Это одно из главных преимуществ КПТ перед другими методами — она краткосрочная и результативная.</p>
@@ -929,8 +929,8 @@
       <div class="faq-item">
         <h3 class="faq-item__question">5000&nbsp;₽ за час — не дорого ли?</h3>
         <div class="faq-item__answer">
-          <p>Давайте посчитаем. Средняя стоимость КПТ-терапевта в Москве — 4000-7000&nbsp;₽. Полный курс лечения
-            тревоги (10 сессий) — это 45000&nbsp;₽ при покупке пакета.</p>
+          <p>Давайте посчитаем. Средняя стоимость КПТ-терапевта в Москве — 4000-7000&nbsp;₽. Полный курс терапии
+            при тревоге (10 сессий) — это 45000&nbsp;₽ при покупке пакета.</p>
           <p>Сравните с альтернативами:</p>
           <ul>
             <li>Годы посещения обычного психолога без результата — 200000 - 500000&nbsp;₽</li>
@@ -1226,8 +1226,7 @@
       <div class="footer__section">
         <h3 class="footer__title">О методе</h3>
         <p class="footer__text">
-          Когнитивно-поведенческая терапия (КПТ) — научно обоснованный метод лечения тревожных расстройств с доказанной
-          эффективностью 75-85%.
+          Когнитивно-поведенческая терапия (КПТ) — научно обоснованный метод помощи при тревожных расстройствах.
         </p>
       </div>
     </div>
