--- a/public/v/b/index.html
+++ b/public/v/b/index.html
@@ -25,7 +25,7 @@
   
   <meta property="og:type" content="website">
   <meta property="og:url" content="http://localhost:1313/v/b/">
-  <meta property="og:title" content="Психолог онлайн: Лечение тревожности КПТ | Ксения Парваткина">
+  <meta property="og:title" content="Психолог онлайн: Помощь при тревожности КПТ | Ксения Парваткина">
   <meta property="og:description"
     content="Избавьтесь от тревоги за 8-12 сессий. Когнитивно-поведенческая терапия (КПТ) с доказанной эффективностью 85%. Онлайн консультации, конфиденциально.">
   
@@ -39,7 +39,7 @@
 
   
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Психолог онлайн: Лечение тревожности КПТ | Ксения Парваткина">
+  <meta name="twitter:title" content="Психолог онлайн: Помощь при тревожности КПТ | Ксения Парваткина">
   <meta name="twitter:description"
     content="Избавьтесь от тревоги за 8-12 сессий. Когнитивно-поведенческая терапия (КПТ) с доказанной эффективностью 85%.">
   
@@ -76,7 +76,7 @@
         "@type": "ProfessionalService",
         "@id": "http:\/\/localhost:1313\/#service",
         "name": "Психолог онлайн — Ксения Парваткина",
-        "description": "Онлайн консультации психолога. Лечение тревожности, панических атак методом когнитивно-поведенческой терапии (КПТ).",
+        "description": "Онлайн консультации психолога. Психологическая помощь при тревоге, панических атаках методом когнитивно-поведенческой терапии (КПТ).",
         "url": "http:\/\/localhost:1313\/",
         "telephone": "+905071754633",
         "priceRange": "5000-45000 ₽",
@@ -826,8 +826,7 @@
       <div class="footer__section">
         <h3 class="footer__title">О методе</h3>
         <p class="footer__text">
-          Когнитивно-поведенческая терапия (КПТ) — научно обоснованный метод лечения тревожных расстройств с доказанной
-          эффективностью 75-85%.
+          Когнитивно-поведенческая терапия (КПТ) — научно обоснованный метод помощи при тревожных расстройствах.
         </p>
       </div>
     </div>
